# perflib-explorer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: fetch.rs  main.rs  opt.rs  print.rs  types.rs  winapi.rs
src/fetch/: counters.rs  countersets.rs  instances.rs  providers.rs
