[package]
name = "perflib-explorer"
version = "0.2.0"
description = "Tools for fetching countersets, counters, instances, and data from Windows V2 performance counter providers."
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.10", default-features = false, features = ["humantime"] }
log = "0.4"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
